Move gallery to source order end, fix overflow scroll with clipping.
This commit also updates to jQuery v2.2.4, the last supported version
of jQuery that the lightbox gallery plugin (Poptrox) currently in use
will support.

--- a/assets/sass/layout/_main.scss
+++ b/assets/sass/layout/_main.scss
@@ -4,9 +4,20 @@
 /// Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 ///
 
-/* Main */
+/* Main gallery. */
 
-	#main {
+	#gallery-wrapper {
+		display: flow-root;
+		overflow: clip;
+		height: 100vh;
+	}
+
+	#page-home #gallery-wrapper {
+		overflow: auto;
+		height: auto;
+	}
+
+	#gallery {
 		@include vendor('transition', (
 			'-moz-filter #{_duration(panel)} ease',
 			'-webkit-filter #{_duration(panel)} ease',
@@ -176,7 +187,7 @@
 
 	}
 
-    #main {
+    #gallery {
         & article.thumb a {
             position: relative;
 
